crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__match_int_lowers_to_switch.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 476
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: I32
            mutability: Immutable
        result: I32
      - kind: Block
        parent: 0
        locals: []
        result: I32
      - kind: Block
        parent: 0
        locals: []
        result: I32
      - kind: Block
        parent: 0
        locals: []
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Switch:
                  selector:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 0
                    ty: I32
                  cases:
                    - - 0
                      - kind:
                          Block:
                            scope_index: 1
                            expressions:
                              - kind:
                                  Int:
                                    value: 0
                                ty: I32
                        ty: I32
                    - - 1
                      - kind:
                          Block:
                            scope_index: 2
                            expressions:
                              - kind:
                                  Int:
                                    value: 1
                                ty: I32
                        ty: I32
                  default:
                    kind:
                      Block:
                        scope_index: 3
                        expressions:
                          - kind:
                              Neg:
                                value:
                                  kind:
                                    Int:
                                      value: 1
                                  ty: I32
                            ty: I32
                    ty: I32
              ty: I32
      ty: I32
    static_data: []
signatures:
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 476
      name: 168
imports: []
memories: []
aggregates: []
static_entries: []
start_function: ~
